welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:35: error: not found: value avance4
avance4()
^